Stops main content area collapsing

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -727,6 +727,8 @@ div.widget .extendednavigation ul li, div.widget.extendednavigation ul li {
 .page-wrap > .main {
 	background-color: darken(@color-swatch1, 1.5%);
 	border-bottom: 1px solid @borders-blocks;
+	float: left;
+	width: 100%;
 }
 
 // Slideshow
